<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <import type="android.view.View"/>
        <variable name="patientDetailVm" type="com.harman.interview.mvvm.viewmodel.PatientDetailViewModel"/>
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/profileCardMargin"
            app:cardCornerRadius="@dimen/profileCardCornerRadius"
            app:cardBackgroundColor="@android:color/transparent">

            <ImageView
                android:id="@+id/places_image"
                android:layout_width="match_parent"
                android:layout_height="@dimen/profileImgHeight"
                android:src="@drawable/ic_person_outline_24dp"
                android:scaleType="fitXY"
                android:contentDescription="@string/profilePhoto"/>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/profileCardMargin"
            app:cardElevation="@dimen/profileCardElevation">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/profileCellHeight"
                    android:gravity="center"
                    android:orientation="horizontal"
                    android:background="@drawable/line">

                    <TextView
                        android:id="@+id/tv_nameDesc"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:layout_marginStart="@dimen/profileCellMargin"
                        android:text="@string/name"
                        android:textColor="@color/textColor"
                        android:textSize="@dimen/profileTextSize"
                        android:gravity="start"
                        android:layout_gravity="center"
                        android:textStyle="normal"/>

                    <View
                        android:layout_width="2dp"
                        android:layout_height="match_parent"
                        android:background="@color/lineColor"/>

                    <TextView
                        android:id="@+id/tv_name"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:maxLines="1"
                        android:ellipsize="end"
                        android:layout_marginStart="@dimen/profileCellMargin"
                        android:text="@string/na"
                        android:textColor="@color/textColor"
                        android:textSize="@dimen/profileTextSize"
                        android:gravity="start"
                        android:textStyle="bold"/>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/profileCellHeight"
                    android:gravity="center"
                    android:orientation="horizontal"
                    android:background="@drawable/line">

                    <TextView
                        android:id="@+id/tv_addressDesc"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:layout_marginStart="@dimen/profileCellMargin"
                        android:text="@string/address"
                        android:textColor="@color/textColor"
                        android:textSize="@dimen/profileTextSize"
                        android:gravity="start"
                        android:textStyle="normal"/>

                    <View
                        android:layout_width="2dp"
                        android:layout_height="match_parent"
                        android:background="@color/lineColor"/>

                    <TextView
                        android:id="@+id/tv_address"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:maxLines="1"
                        android:ellipsize="end"
                        android:layout_marginStart="@dimen/profileCellMargin"
                        android:text="@string/na"
                        android:textColor="@color/textColor"
                        android:textSize="@dimen/profileTextSize"
                        android:gravity="start"
                        android:textStyle="bold"/>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/profileCellHeight"
                    android:gravity="center"
                    android:orientation="horizontal"
                    android:background="@drawable/line">

                    <TextView
                        android:id="@+id/tv_nhsDesc"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:layout_marginStart="@dimen/profileCellMargin"
                        android:text="@string/nhs"
                        android:textColor="@color/textColor"
                        android:textSize="@dimen/profileTextSize"
                        android:gravity="start"
                        android:textStyle="normal"/>

                    <View
                        android:layout_width="2dp"
                        android:layout_height="match_parent"
                        android:background="@color/lineColor"/>

                    <TextView
                        android:id="@+id/tv_nhs"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:maxLines="1"
                        android:ellipsize="end"
                        android:layout_marginStart="@dimen/profileCellMargin"
                        android:text="@string/na"
                        android:textColor="@color/textColor"
                        android:textSize="@dimen/profileTextSize"
                        android:gravity="start"
                        android:textStyle="bold"/>
                </LinearLayout>
            </LinearLayout>
        </androidx.cardview.widget.CardView>
    </LinearLayout>
</layout>